# ai-simple-engine-runtime-transformers-musicgen

./: .gitignore  README.md  pyproject.toml
src/ai_simple_engine_runtime_transformers_musicgen/: __init__.py  consts.py  plugin.py
src/ai_simple_engine_runtime_transformers_musicgen/model/: loaded_musicgen_model.py
src/ai_simple_engine_runtime_transformers_musicgen/model/executor/: abstract.py  transformers_musicgen_model_executor.py
src/ai_simple_engine_runtime_transformers_musicgen/model/executor/registry/: musicgen_model_executor_registry.py
src/ai_simple_engine_runtime_transformers_musicgen/model/info/: musicgen_model_info.py
src/ai_simple_engine_runtime_transformers_musicgen/model/loader/: musicgen_model_loader.py
tests/: test_main.py
